@@ -11,6 +11,7 @@ Change Log:
 - Add a new Add/Edit Member page where subscription details can be modified
 - Add an admin notice when no payment gateway is active but paid memberships exist
 - Add bulk actions to the Members admin page
+- Add a dedicated Edit Membership page with improved layout
 - Improve payment logs to display additional information for errors
 - Improve the layout of the coupon fields during in the payment form
 - Fix wrong subscription logic that activated Subscriptions without payment in a few cases
